fixed some alignments in submit lost item page

--- a/project_code/submit_lost_item.css
+++ b/project_code/submit_lost_item.css
@@ -5,7 +5,7 @@
 }
 
 .submitLost-info{
-    margin: 20px 20px 38px 20px;
+    margin: 29px 20px;
 }
 
 .submitLost-input{
@@ -16,9 +16,6 @@
     background-color:lightblue;
 }
 
-/* .submitLost-img-info{
-    margin: 150px 60px;
-} */
 .submitLost-img{
     height: 300px;
     padding: 50px;
@@ -56,7 +53,7 @@
 }
 
 .aai{
-    margin: 0px 16px 0px 10px;
+    margin: 0px 16px 0px 5px;
 }
 
 .btn-submit{
